fix touch screen drag bug, which jumps to default search engine

--- a/css/main.css
+++ b/css/main.css
@@ -447,3 +447,7 @@ body {
     -webkit-animation-timing-function:   linear;
     -webkit-transform-origin:            50% 100%;
  }
+
+ .dragBox, .dropBox{
+ 	touch-action:none;
+ }
